# homework_30

./: db.sqlite3  pyproject.toml
ads/: models.py  permissions.py  serializer.py  view_selections.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0002_rename_authot_ad_author.py  0003_rename_adress_ad_address.py  0003_selection.py
ads/urls/: ad.py  cat.py  selections.py
data/: convert_csv_to_json.py
djangoProject1/: settings.py  urls.py
users/: models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_name.py  0003_alter_user_role.py
